change one heading for check, is it work?

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
             <div class="article4">
                 <div><img class="images4" src="images/article-img.jpg">
-                    <h3 class="mp"><a class="atticle-link" href="">Coronavirus doctor's diary:</a></h3>
+                    <h3 class="mp"><a class="atticle-link" href="">Coronavirus  doctor's diary change something:</a></h3>
                     <P class="mp"><img class="clock" src="images/clock.jpg"> 01 July 2020. <a class="atticle-link" href="">Students</a></P>
                 </div>
             </div>
